Update print statement from 'Hello' to 'Goodbye'

--- a/cubes.html
+++ b/cubes.html
@@ -135,7 +135,7 @@
     </header>
 
     <!-- Tools -->
-    <div class="sticky-tools">
+    <div>
       <div class="container container-max">
         <div class="row g-2 align-items-center">
           <div class="col-12 col-lg-6">
@@ -198,7 +198,7 @@
       </div>
     </div>
 
-    <Plats principaux class="py-4">
+    <main class="py-4">
       <div class="container container-max">
 
         <!-- ========================= -->
@@ -1540,7 +1540,7 @@
 
         </footer>
       </div>
-    </Plats principaux>
+    </main>
 
     <!-- Bootstrap JS (optional for components, not required for search) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
