Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/cubes.html
+++ b/cubes.html
@@ -135,7 +135,7 @@
     </header>
 
     <!-- Tools -->
-    <div>
+    <div class="sticky-tools">
       <div class="container container-max">
         <div class="row g-2 align-items-center">
           <div class="col-12 col-lg-6">
@@ -181,16 +181,6 @@
                 <a href="#sec-bols">Bols assemblés</a>
                 <a href="#sec-patisserie">Boulangerie en cubes</a>
                 <a href="#sec-sides">Accompagnements et idées</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-lg-5">
-            <div class="note">
-              <div class="smallcaps muted mb-1">Notes sur coûts et nutrition</div>
-              <div class="muted">
-                Coûts et macros sont des <b>estimations</b> (Ottawa, CAD). Selon marques, promos,
-                quantité réelle de protéines, et niveau de sodium. Utilise-les pour planifier, pas comme
-                étiquette officielle.
               </div>
             </div>
           </div>
