Update print statement from 'Hello' to 'Goodbye'

--- a/cubes.html
+++ b/cubes.html
@@ -48,6 +48,14 @@
         padding-bottom: 12px;
         border-bottom: 1px solid rgba(0, 0, 0, 0.06);
       }
+      @media (max-width: 991.98px) {
+  .sticky-tools {
+    position: static;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
       .muted {
         color: rgba(0, 0, 0, 0.65);
       }
@@ -188,9 +196,81 @@
         </div>
       </div>
     </header>
-    <!-- Tools -->
+    <!-- Tools --><div class="d-none d-lg-block">
     <div class="sticky-tools">
       <div class="container container-max">
+        <!-- Mobile: bouton hamburger -->
+<div class="d-lg-none d-flex justify-content-between align-items-center mb-2">
+  <div class="smallcaps muted">Outils</div>
+
+  <button
+    class="btn btn-primary btn-sm"
+    type="button"
+    data-bs-toggle="offcanvas"
+    data-bs-target="#toolsDrawer"
+    aria-controls="toolsDrawer"
+  >
+    ☰ Outils
+  </button>
+</div>
+
+<!-- Offcanvas (mobile tools drawer) -->
+<div
+  class="offcanvas offcanvas-end"
+  tabindex="-1"
+  id="toolsDrawer"
+  aria-labelledby="toolsDrawerLabel"
+>
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="toolsDrawerLabel">Outils</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Fermer"></button>
+  </div>
+
+  <div class="offcanvas-body">
+    <!-- Déplace ici: recherche + filtres + TOC -->
+    <div class="mb-3">
+      <label for="searchInputMobile" class="form-label smallcaps muted">Recherche</label>
+      <input
+        id="searchInputMobile"
+        type="search"
+        class="form-control"
+        placeholder="Ex: soupe, coco, tag:vegetarien…"
+      />
+      <div class="form-text">
+        Astuce: <span class="kbd">en-stock</span>, <span class="kbd">tag:soupe</span>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <div class="smallcaps muted mb-2">Filtres</div>
+      <div class="d-flex flex-wrap gap-2">
+        <button class="btn btn-outline-primary btn-sm btn-chip" data-filter="tag:soupe">Soupes</button>
+        <button class="btn btn-outline-primary btn-sm btn-chip" data-filter="tag:bol">Bols</button>
+        <button class="btn btn-outline-primary btn-sm btn-chip" data-filter="tag:vegetarien">Végétarien</button>
+        <button class="btn btn-outline-primary btn-sm btn-chip" data-filter="tag:poisson">Poisson</button>
+        <button class="btn btn-success btn-sm btn-chip" id="toggleInStockMobile" aria-pressed="true">En stock seulement</button>
+        <button class="btn btn-outline-secondary btn-sm btn-chip" id="clearBtnMobile">Réinitialiser</button>
+      </div>
+    </div>
+
+    <div class="mb-2">
+      <div class="smallcaps muted mb-2">Table des matières</div>
+      <div class="toc d-flex flex-column gap-2">
+        <a href="#sec-soupes" data-bs-dismiss="offcanvas">Soupes et ragoûts</a>
+        <a href="#sec-mains" data-bs-dismiss="offcanvas">Mains</a>
+        <a href="#sec-riz" data-bs-dismiss="offcanvas">Riz et grains</a>
+        <a href="#sec-veg" data-bs-dismiss="offcanvas">Bases légumes</a>
+        <a href="#sec-denses" data-bs-dismiss="offcanvas">Composants denses</a>
+        <a href="#sec-bols" data-bs-dismiss="offcanvas">Bols</a>
+        <a href="#sec-patisserie" data-bs-dismiss="offcanvas">Boulangerie</a>
+        <a href="#sec-sides" data-bs-dismiss="offcanvas">Accompagnements</a>
+
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
         <div class="row g-2 align-items-center">
           <div class="col-12 col-lg-6">
             <label class="form-label mb-1 smallcaps muted" for="searchInput"
@@ -2878,6 +2958,7 @@
     </main>
     <!-- Bootstrap JS (optional for components, not required for search) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
       const searchInput = document.getElementById("searchInput");
       const clearBtn = document.getElementById("clearBtn");
@@ -2929,6 +3010,46 @@
       // Initial
       applyFilter("");
     </script>
+    <script>
+  (function(){
+    const desktop = document.getElementById("searchInput");
+    const mobile = document.getElementById("searchInputMobile");
+    const clearDesktop = document.getElementById("clearBtn");
+    const clearMobile = document.getElementById("clearBtnMobile");
+
+    function setSearch(v) {
+      if (desktop) desktop.value = v;
+      if (mobile) mobile.value = v;
+      if (typeof applyFilter === "function") applyFilter(v || "");
+    }
+
+    if (desktop && mobile) {
+      desktop.addEventListener("input", () => setSearch(desktop.value));
+      mobile.addEventListener("input", () => setSearch(mobile.value));
+    } else if (mobile && !desktop) {
+      mobile.addEventListener("input", () => setSearch(mobile.value));
+    }
+
+    if (clearDesktop) clearDesktop.addEventListener("click", () => setSearch(""));
+    if (clearMobile) clearMobile.addEventListener("click", () => setSearch(""));
+
+    // Filtres rapides dans l’offcanvas (data-filter existe déjà)
+    document.querySelectorAll("#toolsDrawer [data-filter]").forEach(btn => {
+      btn.addEventListener("click", () => {
+        const v = btn.getAttribute("data-filter");
+        setSearch(v);
+      });
+    });
+
+    // Toggle en-stock mobile: déclenche le même comportement que desktop
+    const tDesk = document.getElementById("toggleInStock");
+    const tMob = document.getElementById("toggleInStockMobile");
+    if (tDesk && tMob) {
+      tMob.addEventListener("click", () => tDesk.click());
+    }
+  })();
+</script>
+
     <script>
       // JSONP loader (pour Apps Script sans CORS)
       function jsonp(url) {
