Update print statement from 'Hello' to 'Goodbye'

--- a/cubes.html
+++ b/cubes.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="fr-CA">
@@ -196,8 +197,7 @@
         </div>
       </div>
     </header>
-    <!-- Tools --><div class="d-none d-lg-block">
-<div class="sticky-tools">
+    <!-- Tools --><div class="sticky-tools">
   <div class="container container-max">
 
     <!-- Mobile: barre minimale -->
@@ -274,7 +274,6 @@
   </div>
 </div>
 
-    </div>
     <main class="py-4">
       <div class="container container-max">
         <!-- ========================= -->
