--- a/cubes.html
+++ b/cubes.html
@@ -157,11 +157,17 @@
           font-size: 1.05rem;
         }
       }
-
+    
 
 /* Collapse recipes: toggle caret rotation */
 button[data-recipe-toggle] .mono { display:inline-block; transition: transform .15s ease; }
 button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg); }
+
+
+@media (max-width: 991.98px) {
+  .sticky-tools { position: static; padding-top: 10px; padding-bottom: 10px; }
+  .hr-soft { display: none; }
+}
 </style>
 </head>
 <body>
@@ -356,10 +362,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
                     </div>
 </div>
 </div></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -455,10 +457,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
                     </div>
 </div>
 </div></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -551,10 +549,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
                     </div>
 </div>
 </div></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -635,10 +629,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
                     </div>
 </div>
 </div></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -717,10 +707,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </div>
 </div>
 </div></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -802,10 +788,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
                     </div>
 </div>
 </div></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -862,13 +844,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost"></span>
 <span class="badge badge-nutri"></span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -950,13 +925,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 3.50 à 4.50 $</span>
 <span class="badge badge-nutri">≈ 500 à 650 kcal (selon riz)</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1034,13 +1002,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 4.50 à 6.50 $ (selon prix du poulet)</span>
 <span class="badge badge-nutri">≈ 550 à 750 kcal</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1098,13 +1059,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 1.70 à 2.70 $</span>
 <span class="badge badge-nutri">≈ 450 à 650 kcal</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1162,13 +1116,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 1.15 à 2.50 $</span>
 <span class="badge badge-nutri">≈ 480 à 650 kcal</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1227,13 +1174,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 1.20 à 3.20 $</span>
 <span class="badge badge-nutri">≈ 500 à 700 kcal</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1316,13 +1256,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 4.50 à 7.00 $ (selon promo poulet)</span>
 <span class="badge badge-nutri">≈ 550 à 800 kcal</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1403,13 +1336,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 3.50 à 6.00 $ (paneer et marques)</span>
 <span class="badge badge-nutri">≈ 600 à 850 kcal</span>
 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1460,13 +1386,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="smallcaps muted mb-1">Notes congélation</div><ul class="list-tight">
 <li>Ne pas trop tasser, ça réchauffe mieux.</li>
 </ul></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1498,13 +1417,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="smallcaps muted mb-1">Astuce</div><div class="muted">
                   Sous-cuire légèrement, la réchauffe termine la cuisson.
                 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1540,13 +1452,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="smallcaps muted mb-1">Note</div><div class="muted">
                   Éviter 100% coco, ça devient gras au congélo.
                 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1578,11 +1483,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ul><div class="smallcaps muted mb-1">Étapes</div><ol class="list-tight">
 <li>Rincer, cuire, refroidir, cubes 1 tasse.</li>
 </ol></div>
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1629,13 +1529,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="smallcaps muted mb-1">Pairings</div><div class="muted">
                   Chili, poulet miel, curry lentilles, masala paneer.
                 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1663,9 +1556,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="muted">
                   Super pour ajouter du volume sans exploser les calories.
                 </div></div>
-
-
-
 </div>
 </div>
 </div>
@@ -1695,10 +1585,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <li>Sauter 4 à 6 min, juste tendre.</li>
 <li>Refroidir, cubes 1 tasse.</li>
 </ol></div>
-
-
-
-
 </div>
 </div>
 </div>
@@ -1740,13 +1626,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="smallcaps muted mb-1">Pairings</div><div class="muted">
                   Poke végétarien, chili verde, poulet miel, bols rapides.
                 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1797,13 +1676,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ol><div class="smallcaps muted mb-1">Usage</div><div class="muted">
                   Traiter comme féculent: 0.5 tasse par repas.
                 </div></div>
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1834,9 +1706,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
                     tasse)
                   </li>
 </ul></div>
-
-
-
 </div>
 </div>
 </div>
@@ -1866,8 +1735,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ul><div class="muted">
                   Objectif: réduire le gaspillage, accélérer les repas.
                 </div></div>
-
-
 </div>
 </div>
 </div>
@@ -1922,16 +1789,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-cost">≈ 1.70 à 2.60 $</span>
 <span class="badge badge-nutri">≈ 450 à 600 kcal</span>
 </div></div>
-
-
-
-
-
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -1964,9 +1821,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ul><div class="muted">
                   Total: 2.25 à 2.5 tasses. Tu restes dans ta limite.
                 </div></div>
-
-
-
 </div>
 </div>
 </div>
@@ -2062,11 +1916,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 <span class="badge badge-nutri">≈ 6 à 8 g fibres</span>
 <span class="badge badge-cost">≈ 0.35 à 0.70 $</span>
 </div></div>
-
-
-
-
-
 </div>
 </div>
 </div>
@@ -2102,8 +1951,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ul><div class="muted">
                   Meilleur frais, pas idéal en cubes long terme.
                 </div></div>
-
-
 </div>
 </div>
 </div>
@@ -2131,8 +1978,6 @@ button[data-recipe-toggle][aria-expanded="true"] .mono { transform: rotate(90deg
 </ul><div class="muted">
                   Cubes 1/2 tasse ou 1 tasse selon densité.
                 </div></div>
-
-
 </div>
 </div>
 </div>
@@ -2580,12 +2425,12 @@ function applyMode() {
 <div class="mb-3">
 <div class="smallcaps muted mb-2">Filtres</div>
 <div class="d-flex flex-wrap gap-2">
-<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:soupe">Soupes</button>
-<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:bol">Bols</button>
-<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:vegetarien">Végétarien</button>
-<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:poisson">Poisson</button>
-<button aria-pressed="true" class="btn btn-success btn-sm btn-chip" id="toggleInStockMobile">En stock seulement</button>
-<button class="btn btn-outline-secondary btn-sm btn-chip" id="clearBtnMobile">Réinitialiser</button>
+<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:soupe" type="button">Soupes</button>
+<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:bol" type="button">Bols</button>
+<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:vegetarien" type="button">Végétarien</button>
+<button class="btn btn-outline-primary btn-sm btn-chip" data-bs-dismiss="offcanvas" data-filter="tag:poisson" type="button">Poisson</button>
+<button aria-pressed="true" class="btn btn-success btn-sm btn-chip" id="toggleInStockMobile" type="button">En stock seulement</button>
+<button class="btn btn-outline-secondary btn-sm btn-chip" id="clearBtnMobile" type="button">Réinitialiser</button>
 </div>
 </div>
 <div class="mb-2">
@@ -2603,7 +2448,6 @@ function applyMode() {
 </div>
 </div>
 </div>
-
 <script>
   (function(){
     document.querySelectorAll('button[data-recipe-toggle]').forEach(btn => {
@@ -2628,5 +2472,61 @@ function applyMode() {
   })();
 </script>
 
+<script>
+  (function () {
+    function wireMobileTools() {
+      const drawer = document.getElementById("toolsDrawer");
+      const mobile = document.getElementById("searchInputMobile");
+      const desktop = document.getElementById("searchInput");
+      const clearMobile = document.getElementById("clearBtnMobile");
+      const toggleMobile = document.getElementById("toggleInStockMobile");
+      const toggleDesktop = document.getElementById("toggleInStock");
+
+      if (!drawer || !mobile) return;
+
+      function setSearch(v) {
+        if (desktop) desktop.value = v;
+        mobile.value = v;
+        if (typeof applyFilter === "function") applyFilter(v || "");
+      }
+
+      // Search input
+      if (!mobile.__wired) {
+        mobile.addEventListener("input", () => setSearch(mobile.value));
+        mobile.__wired = true;
+      }
+
+      // Clear
+      if (clearMobile && !clearMobile.__wired) {
+        clearMobile.addEventListener("click", () => setSearch(""));
+        clearMobile.__wired = true;
+      }
+
+      // Filter buttons inside drawer
+      drawer.querySelectorAll("[data-filter]").forEach(btn => {
+        if (btn.__wired) return;
+        btn.addEventListener("click", () => {
+          const v = btn.getAttribute("data-filter");
+          setSearch(v);
+        });
+        btn.__wired = true;
+      });
+
+      // Toggle en-stock (mobile déclenche desktop)
+      if (toggleMobile && toggleDesktop && !toggleMobile.__wired) {
+        toggleMobile.addEventListener("click", () => toggleDesktop.click());
+        toggleMobile.__wired = true;
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", wireMobileTools);
+
+    document.addEventListener("shown.bs.offcanvas", function (evt) {
+      if (evt.target && evt.target.id === "toolsDrawer") {
+        wireMobileTools();
+      }
+    });
+  })();
+</script>
 </body>
 </html>
